# haskell-ci

./: LICENSE  README.md  haskell-ci.cabal  haskell-ci.hs
