name:                haskell-ci
version:             0.0
synopsis:            Continuous integration in haskell
homepage:            http://github.com/enolan/haskell-ci
license:             PublicDomain
license-file:        LICENSE
author:              Echo Nolan
maintainer:          echo@echonolan.net
category:            Development
build-type:          Simple
cabal-version:       >=1.8

executable haskell-ci
  main-is:           haskell-ci.hs
  -- other-modules:       
  build-depends:       base ==4.5.*
